miniextendr-macros/tests/ui/fn_option_takes_no_args.stderr
error: this option does not take any arguments
 --> tests/ui/fn_option_takes_no_args.rs:3:15
  |
3 | #[miniextendr(invisible(true))]
  |               ^^^^^^^^^^^^^^^
